# frontpage

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  generate_codes.py  init_db.py  install.sh  migrate-and-run.sh  pyproject.toml  requirements.txt  type_articles.html
docker/: Dockerfile  docker-compose.yml  supervisord.conf
docs/: readme.md
files/: frontpage.service  nginx.conf
frontpage/: __init__.py  add_type.py  all_articles_alphabetized.html  display.py  forms.py  install_display.sh  models.py  routes.py
frontpage/static/: quotes.json  script.js  style.css
frontpage/templates/: about.html  all_articles.html  all_articles_alphabetized.html  all_categories.html  approve_articles.html  article.html  author_articles.html  base.html  country_articles.html  edit_article.html  home.html  impact.html  login.html  publish.html  register.html  search_results.html  settings.html  source_articles.html  submit.html  type_articles.html  users.html
migrations/: alembic.ini  env.py
migrations/versions/: 481c95eb0a13_.py  5cd34fd711ec_.py  6938a905941f_increase_sizes_of_more_articles_fields.py  717f07b5b29e_db_optimizations.py  969132890ea8_.py  d27d6236aaec_increase_size_of_articles_country_field.py  (+4 more)
static/: script.js  style.css
templates/: all_articles.html  all_categories.html  approve_articles.html  article.html  author_articles.html  base.html  country_articles.html  edit_article.html  home.html  login.html  publish.html  register.html  settings.html  source_articles.html  team.html  type_articles.html  users.html
(+1 files in other folders)
