[tool.poetry]
name = "frontpage"
version = "0.1.0"
description = ""
authors = ["Science & Design <hello@scidsg.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-login = "^0.6.3"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
gunicorn = "^21.2.0"
markdown = "^3.5.2"
passlib = "^1.7.4"
pycountry = "^23.12.11"
python-dotenv = "^1.0.0"
python-slugify = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
