[tool.poetry]
name = "frontpage"
version = "0.1.0"
description = ""
authors = ["Science & Design <hello@scidsg.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-login = "^0.6.3"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
gunicorn = "^21.2.0"
markdown = "^3.5.2"
passlib = "^1.7.4"
pycountry = "^23.12.11"
python-dotenv = "^1.0.0"
python-slugify = "^8.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
types-flask-migrate = "^4.0.0.7"
types-flask-sqlalchemy = "^2.5.9.4"
types-markdown = "^3.5.0.20240106"
types-passlib = "^1.7.7.20240106"
types-python-slugify = "^8.0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile= "black"
line_length = 100

[tool.mypy]
